--- a/static/html/mdArticleShow.html
+++ b/static/html/mdArticleShow.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../css/editormd.preview.css" />
+    <link rel="stylesheet" href="../css/editormd.preview.css"/>
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <script src="../js/vue.min.js"></script>
     <script src="../lib/marked.min.js"></script>
     <script src="../lib/prettify.min.js"></script>
     <script src="../lib/raphael.min.js"></script>
@@ -16,23 +17,63 @@
     <script src="../js/editormd.js"></script>
 </head>
 <body>
-<div id="doc-content">
-    <textarea style="display:none;" placeholder="markdown语言">#1111111${md.content }</textarea>
+<div id="md-content" style="width: 80%;text-align: center">
+    <textarea style="display:none;" placeholder="markdown语言">#22222{{content}}</textarea>
 </div>
 
+
 <script type="text/javascript">
-    var testEditor;
-    $(function () {
-        testEditor = editormd.markdownToHTML("doc-content", {//注意：这里是上面DIV的id
-            htmlDecode: "style,script,iframe",
-            emoji: true,
-            taskList: true,
-            tocm: true,
-            tex: true, // 默认不解析
-            flowChart: true, // 默认不解析
-            sequenceDiagram: true, // 默认不解析
-            codeFold: true
-        });});
+    // // 定义一个名为 button-counter 的新组件
+    // Vue.component('md-content', {
+    //     data: function () {
+    //         return {
+    //             count: 0
+    //         }
+    //     },
+    //     props: ['content'],
+    //     template: `
+    //             <textarea style="display:none;" placeholder="markdown语言">{{content}}</textarea>
+    //     `
+    // })
+    //
+   var app =  new Vue({
+            el: '#md-content',
+            data: {
+                content: '111',
+            },
+            created: function() {
+                // init editor
+                this.content = this.getContent()
+                this.initEditor()
+            },
+            methods: {
+                // init editor
+                initEditor: function () {
+                    var testEditor;
+                    console.log("init editor")
+                    testEditor = editormd.markdownToHTML("md-content", {//注意：这里是上面DIV的id
+                        htmlDecode: "style,script,iframe",
+                        emoji: true,
+                        taskList: true,
+                        tocm: true,
+                        tex: true, // 默认不解析
+                        flowChart: true, // 默认不解析
+                        sequenceDiagram: true, // 默认不解析
+                        codeFold: true
+                    });
+                },
+                // get content
+                getContent: function () {
+                    $.get("", function (data, status) {
+
+                    })
+                    return ""
+                }
+            }
+        })
+
+
 </script>
 </body>
+
 </html>
