--- a/static/html/admin.html
+++ b/static/html/admin.html
@@ -31,7 +31,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="articleEdit.html">写文章</a></li>
+                        <li><a href="mdArticle.html">写文章</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
