--- a/static/html/admin.html
+++ b/static/html/admin.html
@@ -5,6 +5,7 @@
     <title>博客后台</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/admin.css" rel="stylesheet">
 </head>
 <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
@@ -36,5 +37,45 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
+        <div class="container row" >
+            <div class="left-nav col-md-2">
+                <ul class="nav nav-pills nav-stacked">
+                    <li role="presentation"  _link="adminArticle.html"><a href="#">文章管理</a></li>
+                    <li role="presentation" _link="adminUser.html"><a href="#">用户管理</a></li>
+                    <li role="presentation"_link="adminArticle.html"><a href="#">评论管理</a></li>
+                </ul>
+            </div>
+            <div class="right-content col-md-9">
+                <iframe id="content-iframe" width="100%" height="100% " src="adminArticle.html" frameborder="0" class=""></iframe>
+            </div>
+        </div>
+
 </body>
+<script type="application/javascript">
+    // 左侧栏点击后active样式
+    // 并显示对应页面
+    function leftNavActivity() {
+        $.each($(".left-nav li"), function () {
+            console.log(this);
+            $(this).on('click', function () {
+                $.each($(".left-nav li"), function () {
+                    // 其他元素 no active
+                    // 其他元素对应界面隐藏
+                    $(this).removeClass("active")
+                })
+                $(this).addClass("active")
+                let link = $(this).attr("_link")
+                console.log("link", link)
+                $("#content-iframe").attr("src",link)
+            })
+
+        })
+    }
+
+    function changeFrameHeight() {
+        $('#content-iframe').css('height', window.screen.availHeight)
+    }
+    changeFrameHeight()
+    leftNavActivity()
+</script>
 </html>
