--- a/static/html/mdArticle.html
+++ b/static/html/mdArticle.html
@@ -49,7 +49,15 @@
                         </div>
                         <div class="form-group">
                             <label for="type_id">文章类型</label>
-                            <input name="type_id" class="form-control" id="type_id" placeholder="类型">
+                            <!--<input name="type_id" class="form-control" id="type_id" placeholder="类型">-->
+                            <!--todo 后端生成文章类型列表-->
+                            <select name="type_id" id="type_id">
+                                <option value="1">技术杂谈</option>
+                                <option value="2">Java</option>
+                                <option value="3">GO</option>
+                                <option value="4">JavaScript</option>
+                                <option value="5">前端</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputFile">封面</label>
