--- a/static/html/article.html
+++ b/static/html/article.html
@@ -76,10 +76,10 @@
     <div class="col-md-2 article-left"></div>
     <div class="article col-md-7">
         <div class="article-title">
-            <h1>{{article.ArticleTitle}}</h1>
-            <span>{{article.CreateTime}}</span>
+            <h1>{{article.article_title}}</h1>
+            <span>{{article.create_time}}</span>
             <span>字数 585</span>
-            <span>阅读 1061</span>
+            <span>阅读 {{article.view_num}}</span>
         </div>
         <div class="article-html">
             <div id="md-content" style="width: 80%;text-align: center">
